drone-ci/server/droneserver-ingress.yaml
# 이것 보다 deronserver-ingress-tls.yaml 을 사용할 것.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone-server
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: drone.agit.us
    http:
      paths:
      - backend:
          serviceName: droneserver
          servicePort: 80
        path: /
